[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/replay/replay_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/replay/banner.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=24]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=25]

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0, 0, 0, 0.752941 )

[node name="Menu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 24 )
script = ExtResource( 2 )

[node name="BannerContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -392.0
margin_top = 64.0
margin_right = 392.0
margin_bottom = -32.0
rect_min_size = Vector2( 720, 624 )
custom_styles/bg = SubResource( 25 )
follow_focus = true

[node name="Container" type="VBoxContainer" parent="BannerContainer"]
unique_name_in_owner = true

[node name="ButtonBack" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 208.0
margin_bottom = 64.0
text = "BACK"

[node name="ButtonStart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 416.0
margin_top = 248.0
margin_right = 608.0
margin_bottom = 328.0
text = "START"

[node name="ButtonDelete" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 416.0
margin_top = -296.0
margin_right = 608.0
margin_bottom = -216.0
text = "DELETE"

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 26 )
popup_exclusive = true

[node name="ButtonCancel" type="Button" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ButtonOK" type="Button" parent="PopupDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -40.0
margin_right = 128.0
margin_bottom = 56.0
text = "DELETE"

[node name="ReplayBanner" parent="PopupDialog" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -208.0
margin_right = 384.0
margin_bottom = -104.0

[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="ButtonDelete" to="." method="_on_ButtonDelete_pressed"]
[connection signal="pressed" from="PopupDialog/ButtonCancel" to="." method="_on_PopupButtonCancel_pressed"]
[connection signal="pressed" from="PopupDialog/ButtonOK" to="." method="_on_PopupButtonOK_pressed"]
